Fix paddings on mobile devices.

--- a/css/latest-articles.css
+++ b/css/latest-articles.css
@@ -23,6 +23,7 @@
   max-width: 1399px;
 }
 .articles-container {
+  padding: 0 140px;
   margin: 0 auto;
 }
 .articles {
@@ -69,6 +70,7 @@
     font-size: 31px;
     margin-bottom: 30px;
   }
+
   .articles {
     grid-template-columns: repeat(auto-fill, 325px);
     justify-content: center;
@@ -84,6 +86,9 @@
 
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
+  .articles-container {
+    padding: 0;
+  }
 }
 
 /* Medium devices (tablets, less than 992px) */
@@ -102,4 +107,7 @@
 
 /* X-Large devices (large desktops, less than 1400px) */
 @media (max-width: 1399.98px) {
+  .articles-container {
+    padding: 0;
+  }
 }
